# re-cursor

./: .gitignore  .gitmodules  README.md  pyproject.toml
data_redacted/api2.cursor.sh/: GET__auth_full_stripe_profile_20250413_211025_213290.json  GET__auth_full_stripe_profile_20250413_211121_660354.json  GET__auth_full_stripe_profile_20250413_211121_782534.json  GET__auth_full_stripe_profile_20250413_211220_497006.json  GET__auth_full_stripe_profile_20250413_211321_362580.json  GET__auth_full_stripe_profile_20250413_211321_540799.json  GET__auth_last_payment_failed_20250413_211120_121208.json  GET__auth_last_payment_failed_20250413_211319_210325.json  GET__extensions-control_20250413_211120_359815.json  GET__updates_api_update_darwin-arm64_cursor_0.48.8_d5f_20250413_211120_129185.json  GET__updates_api_update_darwin-arm64_cursor_0.48.8_d5f_20250413_211318_694479.json  OPTIONS__auth_full_stripe_profile_20250413_211121_539248.json  OPTIONS__auth_full_stripe_profile_20250413_211121_540222.json  OPTIONS__auth_last_payment_failed_20250413_211119_989522.json  POST__aiserver.v1.AiService_AvailableDocs_20250413_211121_392995.json  POST__aiserver.v1.AiService_AvailableDocs_20250413_211121_418481.json  POST__aiserver.v1.AiService_AvailableDocs_20250413_211121_419764.json  POST__aiserver.v1.AiService_AvailableDocs_20250413_211121_429184.json  POST__aiserver.v1.AiService_AvailableDocs_20250413_211321_319834.json  POST__aiserver.v1.AiService_AvailableDocs_20250413_211321_349065.json  (+35 more)
scripts/: dump_requests.py  redact_sensitive_data.py
(+1 files in other folders)
