[project]
name = "re-cursor"
version = "0.1.0"
description = "Understand requests send by Cursor"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "S1M0N38", email = "bertolottosimone@gmail.com" }]
dependencies = [
    "mitmproxy>=11.1.3",
]

[tool.ruff.lint]
extend-select = ["I"]
task-tags = ["FIXME", "TODO", "HACK", "WARN", "PERF", "NOTE", "TEST"]

[tool.pyright]
typeCheckingMode = "basic"
